--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,12 +63,11 @@ body, html {
 }
 
 #photography .fa {
-    padding: 11px 7px 0 0;
     font-size: 20px;
     width: 20px;
     border-radius: 25%;
-    margin-right: 1.7%;
-    margin-top: 15px;
+    margin: 22px 30px 0 0;
+    padding: 5px;
     opacity: 0.9;
     color: white;
     background: rgb(45,45,45);
