--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ body, html {
   dsiplay: block;
   color: black;
   text-align: center;
-  padding: 15px 10px;
+  padding: 10px 7px;
   background-color: rgb(220,220,220);
 }
 
@@ -47,9 +47,9 @@ body, html {
   float: left;
   color: white;
   font-family: 'Raleway';
-  font-size: 22px;
-  padding-top: 11px;
-  padding-left: 30px;
+  font-size: 20px;
+  padding-top: 7px;
+  padding-left: 25px;
 }
 
 /*Social Media Links*/
@@ -66,7 +66,7 @@ body, html {
     font-size: 20px;
     width: 20px;
     border-radius: 25%;
-    margin: 22px 30px 0 0;
+    margin: 15px 30px -7px 0;
     padding: 5px;
     opacity: 0.9;
     color: white;
@@ -207,7 +207,7 @@ body, html {
 	cursor: pointer;
 	display: solid;
 	width: 20vw;
-	font-size: 2vw;
+	font-size: 1.5vw;
 	margin-bottom: 20px;
   -webkit-transition: 0.2s;
 	transition: 0.2s;
@@ -224,17 +224,16 @@ body, html {
 
 #photography .photos img {
 	object-fit: cover;
-	width: 450px;
-	height: 450px;
-	border-radius: 1%;
+  width: 28vw;
+  height: 24vw;
 	cursor: pointer;
-	margin:17px;
+	margin:1vw;
 }
 
 #photography .imageStyle img:hover {
 	-webkit-filter: brightness(60%);
-  -webkit-transition: 0.2s;
-	transition: 0.2s;
+  -webkit-transition: 0.4s;
+	transition: 0.4s;
 }
 
 /* Modal Background */
@@ -301,6 +300,7 @@ body, html {
 	font-size: 15px;
   padding-bottom: 1%;
   padding-right: 1%;
+  float: left;
 }
 
 #photography #footer-date {
