--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,8 @@ body, html {
 	width: 100%;
 }
 #photography body, #photography {
-  background: rgb(45,45,45);
+  /*background: rgb(45,45,45);*/
+  background: rgb(18,23,18);
 }
 
 /*Navigation Bar*/
@@ -21,7 +22,8 @@ body, html {
   z-index: 5;
   top: 0;
   width: 100%;
-  background-color: rgb(45,45,45);
+  /*background-color: rgb(45,45,45);*/
+  background: rgb(18,23,18);
 }
 
 #photography li a {
@@ -70,7 +72,8 @@ body, html {
     padding: 5px;
     opacity: 0.9;
     color: white;
-    background: rgb(45,45,45);
+    /*background: rgb(45,45,45);*/
+    background: rgb(18,23,18);
 }
 
 #photography .fa-instagram:hover {
@@ -152,7 +155,7 @@ body, html {
   background-position: center center;
   background-repeat: no-repeat;
 	background-attachment: fixed;
-  background-size: cover;
+  background-size: contain;
 }
 @media only screen and (max-device-width: 1024px) {
   #photography .portrait {
