--- a/stylesheet.css
+++ b/stylesheet.css
@@ -160,7 +160,7 @@ body, html {
 @media only screen and (max-device-width: 1024px) {
   #photography .portrait {
     background-attachment: scroll;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     height: 550px;
   }
 }
