--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,8 @@ body, html {
 	width: 100%;
 }
 #photography body, #photography {
-  background: rgb(45,45,45);
+  /*background: rgb(45,45,45);*/
+  background: rgb(18,23,18);
 }
 
 /*Navigation Bar*/
@@ -21,7 +22,8 @@ body, html {
   z-index: 5;
   top: 0;
   width: 100%;
-  background-color: rgb(45,45,45);
+  /*background-color: rgb(45,45,45);*/
+  background: rgb(18,23,18);
 }
 
 #photography li a {
@@ -32,9 +34,8 @@ body, html {
   dsiplay: block;
   color: black;
   text-align: center;
-  padding: 20px 16px;
+  padding: 10px 7px;
   background-color: rgb(220,220,220);
-  border-radius: 2%;
 }
 
 #photography #home {-webkit-transition: 0.3s; transition: 0.3s;}
@@ -48,9 +49,9 @@ body, html {
   float: left;
   color: white;
   font-family: 'Raleway';
-  font-size: 26px;
-  padding-top: 13px;
-  padding-left: 30px;
+  font-size: 20px;
+  padding-top: 7px;
+  padding-left: 25px;
 }
 
 /*Social Media Links*/
@@ -64,15 +65,15 @@ body, html {
 }
 
 #photography .fa {
-    padding: 7px;
     font-size: 20px;
     width: 20px;
     border-radius: 25%;
-    margin-right: 1.7%;
-    margin-top: 2.6vmin;
+    margin: 15px 30px -7px 0;
+    padding: 5px;
     opacity: 0.9;
     color: white;
-    background: rgb(45,45,45);
+    /*background: rgb(45,45,45);*/
+    background: rgb(18,23,18);
 }
 
 #photography .fa-instagram:hover {
@@ -94,6 +95,7 @@ body, html {
   font-family: "Raleway";
   font-size: 25px;
   color: white;
+  margin-top: 5%
 }
 
 /*Landing Page*/
@@ -109,7 +111,7 @@ body, html {
 @media only screen and (max-device-width: 1024px) {
   #photography .background_picture {
     background-attachment: scroll;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
   }
 }
 
@@ -125,24 +127,18 @@ body, html {
 #photography .animation-text {
   color: black;
   font-family: "Raleway";
-  font-size: 2vh;
-  line-height: 3vh;
+  font-size: 20px;
+  line-height: 29px;
   position: absolute;
-  top: 20%;
+  top: 12vw;
   animation-name: topFadeIn;
   animation-delay: 0.2s;
   animation-duration: 5s;
   animation-fill-mode: forwards;
 }
-@media only screen and (max-device-width: 1024px) {
-  #photography .animation-text {
-    font-size: 2vh;
-    line-height: 3vh;
-  }
-}
 @keyframes topFadeIn {
   0% { position: absolute; top: -5%; opacity: 0;}
-  75% { position: absolute; top: 20%; opacity: 1; }
+  75% { position: absolute; top: 12vw; opacity: 1; }
   100% { opacity: 1; }
 }
 
@@ -159,12 +155,13 @@ body, html {
   background-position: center center;
   background-repeat: no-repeat;
 	background-attachment: fixed;
-  background-size: cover;
+  background-size: contain;
 }
 @media only screen and (max-device-width: 1024px) {
   #photography .portrait {
     background-attachment: scroll;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
+    height: 900px;
   }
 }
 
@@ -174,7 +171,7 @@ body, html {
 }
 
 #photography .description {
-  font-size: 1.5vmax;
+  font-size: 25px;
 	width: 50vmax;
 	font-family: 'Raleway';
 	padding-top: 75px;
@@ -213,7 +210,7 @@ body, html {
 	cursor: pointer;
 	display: solid;
 	width: 20vw;
-	font-size: 2vw;
+	font-size: 1.5vw;
 	margin-bottom: 20px;
   -webkit-transition: 0.2s;
 	transition: 0.2s;
@@ -230,24 +227,23 @@ body, html {
 
 #photography .photos img {
 	object-fit: cover;
-	width: 450px;
-	height: 450px;
-	border-radius: 1%;
+  width: 28vw;
+  height: 24vw;
 	cursor: pointer;
-	margin:17px;
+	margin:1vw;
 }
 
 #photography .imageStyle img:hover {
 	-webkit-filter: brightness(60%);
-  -webkit-transition: 0.2s;
-	transition: 0.2s;
+  -webkit-transition: 0.4s;
+	transition: 0.4s;
 }
 
 /* Modal Background */
 #photography .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 99;
     left: 0;
     top: 0;
     width: 100%;
@@ -258,8 +254,12 @@ body, html {
 
 /*For Resizing Window*/
 #photography .imgModals img {
+  max-height: calc(100% - 100px);
+  position: fixed;
+  top: 50%;
   max-width: 100%;
   max-width: 100%;
+  transform: translate(-50%, -50%);
 }
 
 /*Go to Top Button*/
@@ -268,9 +268,9 @@ body, html {
   position: fixed;
   height: 4.7vmax;
   width: 4.7vmax;
-  bottom: 10vmax;
-  right: 1%;
-  z-index: 99;
+  bottom: 10%;
+  right: 2%;
+  z-index: 50;
   border: none;
   outline: none;
   background-color: rgb(230,230,230);
@@ -300,14 +300,15 @@ body, html {
 }
 
 #photography #footer-description {
-	font-size: 1.2vw;
-  padding-bottom: 1vw;
-  padding-right: 1vw;
+	font-size: 15px;
+  padding-bottom: 1%;
+  padding-right: 1%;
+  float: left;
 }
 
 #photography #footer-date {
   float: right;
-  font-size: 1.25vw;
-  padding-bottom: 1vw;
-  padding-right: 1vw;
+  font-size: 15px;
+  padding-bottom: 1%;
+  padding-right: 1%;
 }
