--- a/style/homestyle.css
+++ b/style/homestyle.css
@@ -8,7 +8,7 @@ body, html {
 
 #landing {
   height: 100%;
-  background-image: url("ocean.jpg");
+  background-image: url("../images/ocean.jpg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
