--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ body, html {
   z-index: 5;
   top: 0;
   width: 100%;
-  background: rgb(18,23,18);
+  background: rgb(15,15,15);
 }
 
 #photography li a {
@@ -37,11 +37,24 @@ body, html {
   background-color: rgb(220,220,220);
 }
 
-#photography #home {-webkit-transition: 0.3s; transition: 0.3s;}
+#photography #home {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  font-size: 18px;
+  padding-left: 15px;
+  padding-right: 15px; 
+}
+
 #photography #home:hover {
-  font-weight: bold;
+  pointer: default;
   color: rgb(230,230,230);
   background-color: rgb(35,35,35);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #photography #photography-header {
@@ -133,19 +146,23 @@ body, html {
 
 /*Horizontal Divider*/
 #photography .horizontal-divider {
-	background: rgb(45,45,45);
+	background: rgb(15,15,15);
 	height: 25px;
+  z-index: 10;
 }
 
 #photography .portrait {
 	background-image: url("../images/portrait.jpg");
   width: 100%;
-  height: 650px;
+  height: 100vh;
   background-position: center center;
   background-repeat: no-repeat;
 	background-attachment: fixed;
   background-size: contain;
+  z-index: -10;
+  position: relative;
 }
+
 @media only screen and (max-device-width: 1024px) {
   #photography .portrait {
     background-attachment: scroll;
@@ -154,28 +171,19 @@ body, html {
   }
 }
 
-
-/*Description*/
-#photography .description-container {
-  background: rgb(220,220,220);
-}
-
-#photography .description {
-  font-size: 25px;
-	width: 50vmax;
-	font-family: 'Raleway';
-	padding-top: 100px;
-	padding-bottom: 100px;
-	margin: auto;
-}
-
-#photography .table {
-	display: inline;
-	width: 80%; 
-	padding-bottom: 150px;
-	font-family: 'Indie Flower';
-	font-size: 30px;
-	text-align: left;
+.portrait-caption {
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  font-size: 1vw;
+  font-family: "Raleway";
+  font-weight: bold;
+  color: rgb(120,120,120);
+  background: rgb(10,10,10);
+  z-index: -9;
+  padding-top: 1vw;
+  padding-bottom: 0.5vw;
 }
 
 
@@ -184,6 +192,7 @@ body, html {
 	padding-bottom: 200px;
 	text-align: center;
   background-color:white;
+  z-index: 10;
 }
 
 #photography .gallery-div {
@@ -210,28 +219,28 @@ body, html {
   width: 22vw;
   height: 22vw;
 	cursor: pointer;
-	margin: 0.1vw;
+	margin: 0.3vw;
 }
 
 #Landscape {
   display: table;
   margin: auto;
-  margin-top: 5vw;
-}
-
-.cap {
-  height: 0px;
-  width: 100%;
-  margin: 0;
-  visibility: hidden;
-  opacity: 0;
-  font-family: "Raleway";
-  font-size: 1.6vw;
 }
 
 p span {
   display: block;
   margin-bottom: 7px;
+}
+
+.cap {
+  height: 0;
+  width: 0;
+  margin: 0;
+  visibility: hidden;
+  opacity: 0;
+  font-family: "Raleway";
+  font-size: 1.6vw;
+  background: rgba(0,0,0, 0.5);
 }
 
 .img_wrap {
@@ -244,14 +253,15 @@ p span {
 }
 
 .img_wrap:hover {
-  -webkit-filter: brightness(70%);
+  cursor: pointer;
 }
 
 .img_wrap:hover .cap {
+  height: 22vw;
+  width: 22vw;
   position: absolute;
-  top: 43%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -102.5%);
   visibility: visible;
   opacity: 1;
 }
@@ -266,7 +276,7 @@ p span {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(255,255,255,1);
     cursor: pointer;
 }
 
@@ -299,9 +309,9 @@ p span {
   z-index: 50;
   border: none;
   outline: none;
-  background-color: rgb(230,230,230);
+  background-color: rgb(40,40,40);
   font-size: 1vmax;
-  color: black;
+  color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 50%;
@@ -310,32 +320,19 @@ p span {
 }
 
 #photography #topBtn:hover {
-  background-color: rgb(200,200,200);
+  opacity: 0.7;
 }
 
 
 /*Footer*/
-#photography ul li {
-  display: inline;
+.foot-div {
+  text-align: center;
+  background: rgb(10,10,10);
 }
 
-#photography #foot {
+.foot {
   list-style-type: none;
   color: rgb(220,220,220);
-  background-color: rgb(45,45,45);
   font-family: 'Raleway';
-}
-
-#photography #footer-description {
-	font-size: 15px;
-  padding-bottom: 1%;
-  padding-right: 1%;
-  float: left;
-}
-
-#photography #footer-date {
-  float: right;
-  font-size: 15px;
-  padding-bottom: 1%;
-  padding-right: 1%;
+  padding: 15px;
 }
