--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@ body, html {
 	padding: 0;
 	height: 100%;
 	width: 100%;
+  scroll-behavior: smooth;
 }
 #photography body, #photography {
   background: rgb(18,23,18);
@@ -113,6 +114,16 @@ body, html {
     background-attachment: scroll;
     background-repeat: no-repeat;
   }
+
+  #photography .portrait {
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    height: 100%;
+  }
+
+  .portrait-caption {
+    visibility: hidden;
+  }
 }
 
 
@@ -163,14 +174,6 @@ body, html {
   position: relative;
 }
 
-@media only screen and (max-device-width: 1024px) {
-  #photography .portrait {
-    background-attachment: scroll;
-    background-repeat: no-repeat;
-    height: 900px;
-  }
-}
-
 .portrait-caption {
   height: 50px;
   width: 100%;
@@ -180,12 +183,11 @@ body, html {
   font-family: "Raleway";
   font-weight: bold;
   color: rgb(120,120,120);
-  background: rgb(10,10,10);
+  background: rgb(18,23,18);
   z-index: -9;
   padding-top: 1vw;
   padding-bottom: 0.5vw;
 }
-
 
 /*Photography Section*/
 #photography .contentSection {
@@ -233,8 +235,12 @@ p span {
 }
 
 .cap {
-  height: 0;
-  width: 0;
+  height: inherit;
+  width: inherit;
+  position: absolute;
+  z-index: 10;
+  top: 0.5vh;
+  left: 3.3vw;
   margin: 0;
   visibility: hidden;
   opacity: 0;
@@ -250,18 +256,21 @@ p span {
   text-align: center;
   color: white;
   display: table-cell;
+  padding-bottom: 3vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
 }
 
-.img_wrap:hover {
+.img_wrap p:hover {
   cursor: pointer;
 }
 
-.img_wrap:hover .cap {
+.img_div {
   height: 22vw;
   width: 22vw;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -102.5%);
+}
+
+.img_div:hover .cap {
   visibility: visible;
   opacity: 1;
 }
@@ -280,7 +289,6 @@ p span {
     cursor: pointer;
 }
 
-
 /*For Resizing Window*/
 #photography .imgModals img {
   max-height: calc(100% - 100px);
@@ -291,6 +299,7 @@ p span {
   max-width: 100%;
   max-width: 100%;
   transform: translate(-50%, -50%);
+  overflow: hidden !important;
 }
 
 #photography .imgModals img:hover {
