--- a/style.css
+++ b/style.css
@@ -1,81 +1,216 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR');
+/*@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR');*/
 
-.name {
-  font-family: 'Noto Sans KR';
-  font-size: 4vw;
+body, html {
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  margin-top: 2vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
 }
 
-.description {
-  font-family: 'Noto Sans KR';
-  font-size: 1.5vw;
+/*----------------------------------HEADER*/
+#header {
+  padding-bottom: 20vh;
 }
 
-.top-margin {
-  margin-top: 20vh;
+#name-div {
+  float: left;
+  transition: all 0.5s ease;
 }
 
-.links {
-  margin-top: 3vw;
+#name {
+  font-size: 24px;
+  font-weight: 500;
+  text-decoration: none;
+  color: black;
+  display: inline;
+}
+
+#name-div:hover {
+  transform: translateY(10px);
+}
+
+#darkmode:hover {
+  transform: none;
+}
+
+#nav-div {
+  float: right;
+}
+
+.nav {
+  display: inline-block;
+  margin-left: 2vw;
+  transition: all 0.5s ease;
+}
+
+.nav:hover {
+  transform: translateY(8px);
+}
+
+.nav > a {
+  font-size: 18px;
+  font-weight: 500;
+  color: black;
+  text-decoration: none;
+}
+
+/*--------------------------------DARK MODE*/
+#darkmode {
+  color: #868686;
+}
+
+label {
+  vertical-align: sub;
+  line-height: 25px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 33px;
+  height: 18px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 1px;
+  bottom: 1px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition .4s;
+}
+
+input:checked + .slider {
+  background-color: #66BB6A;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #66BB6A;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(15px);
+  -ms-transform: translateX(15px);
+  transform: translateX(15px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 17px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/*-----------------------------INTRODUCTION BODY*/
+#description {
+  width: 65%;
+  font-size: 36px;
+  line-height: 140%;
+  margin-bottom: 30vh;
+}
+
+/*-----------------------------WORK*/
+.grid-container {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.grid-item {
+  width: 21vw;
+  height: 21vw;
+  margin-bottom: 15rem;
+}
+
+.grid-item img {
+  height: 100%;
+  width: 100%;
+  transition: all 0.5s ease;
+}
+
+.grid-item img:hover {
+  transform: translateY(15px);
+  cursor: pointer;
+}
+
+.grid-left {
+  margin-right: auto;
+}
+
+.grid-middle {
   margin-left: auto;
   margin-right: auto;
-  width: fit-content;
 }
 
-.fa {
-  width: 15px;
-  height: 15px;
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
+.grid-right {
+  margin-left: auto;
+}
+
+#title {
+  font-size: 24px;
+  margin-top: 1.5vw;
+  margin-bottom: 0;
+}
+
+#summary {
+  font-size: 18px;
+  line-height: 140%;
+  margin: 0;
+}
+
+/*-----------------------------CONTACT*/
+#contact {
+  font-size: 36px;
+  margin-bottom: 10rem;
+}
+
+#contact ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  line-height: 140%;
+}
+
+#contact ul a {
   text-decoration: none;
-  border-radius: 50%;
-  margin-left: 0.5vw;
-  margin-right: 0.5vw;
-  vertical-align: middle;
+  border-bottom: 4px solid transparent;
+  color: black;
 }
 
-.fa:hover {
-  opacity: 0.7;
+#contact ul a:hover {
+  border-color: black;
 }
 
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
+/*----------------------------FOOTER*/
+#footer {
+  margin-bottom: 5rem;
 }
 
-.fa-instagram {
-  background: #C2185B;
-  color: white;
-}
-
-.github {
-  background: #212121;
-  background-image: url("github.png");
-  background-size: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.photography {
-  background: #546E7A;
-  background-image: url("camera.png");
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.resume {
-  background: #616161;
-  background-image: url("resume.png");
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: center; 
-}
-
-.email {
-  border: black dashed 1px;
-  background-image: url("email.png");
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
+#copyright {
+  font-size: 18px;
 }
