--- a/style/workStyle.css
+++ b/style/workStyle.css
@@ -2,8 +2,23 @@ html, body {
   font-size: 1vw;
 }
 
+.no-bold {
+  font-weight: normal;
+}
+
+.line-height-160 {
+  line-height: 160%;
+}
+
+.big-title {
+  margin-left: 15%;
+  margin-top: 5vw;
+  font-size: 5vw;
+  font-weight: 600;
+}
+
 .work-title {
-  font-size: 36px;
+  font-size: 2.5vw;
   font-weight: bold;
   margin-bottom: 5vw
 }
@@ -37,6 +52,10 @@ html, body {
 .body-container p {
   margin: 0;
   line-height: 210%;
+}
+
+.body-container img {
+  width: 100%;
 }
 
 /*---------------------------Container 3*/
