--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -1,3 +1,11 @@
+#light-bg {
+  background-image:url("../assets/light-bg.jpg");
+  background-size: cover;
+  height: 95vh;
+  -webkit-filter: grayscale(30%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(30%);
+}
+
 /*----------------------------------HEADER*/
 #name-div {
   float: left;
@@ -23,24 +31,23 @@
 }
 
 /*-----------------------------INTRODUCTION BODY*/
-#landing-div {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 150px;
-  max-height: 115px;
-  border-radius: 10px;
-}
-
 #description {
-  text-align: center;
-  font-size: 36px;
-  transition: all 0.3s ease;
+  font-size: 45px;
+  float: right;
+  font-weight: 600;
 }
 
 #description:hover {
   transform: translateY(-10px);
   transition: all 0.3s ease;
   cursor: default;
+}
+
+#home-location {
+  position: absolute;
+  bottom: 5vh;
+  right: 15vw;
+  font-size: 14px;
 }
 
 .wip {
@@ -50,24 +57,32 @@
 }
 
 /*-----------------------------WORK*/
+.content {
+  margin-top: 10vw;
+  margin-left: 15vw;
+  margin-right: 15vw;
+}
+
 .grid-container {
   margin: auto;
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
+  margin-bottom: 10vw;
 }
 
 .grid-item {
-  width: 21vw;
-  height: 21vw;
-  margin-bottom: 15rem;
+  width: 32vw;
+  height: 32vw;
+  margin-bottom: 12rem;
 }
 
 .grid-item img {
   height: 100%;
   width: 100%;
   transition: all 0.5s ease;
+  border-radius: 10px;
 }
 
 .grid-item img:hover {
@@ -75,22 +90,19 @@
   cursor: pointer;
 }
 
-.grid-left {
-  margin-right: auto;
+.grid-item-right {
+  margin-left: auto;
 }
 
-.grid-middle {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid-right {
-  margin-left: auto;
+.not-ready {
+  opacity: 0.7;
+  filter: brightness(30%);
 }
 
 #title {
+  font-weight: 500;
   font-size: 22px;
-  margin-top: 1.5vw;
+  margin-top: 1vw;
   margin-bottom: 0.5vw;
 }
 
