--- a/style/sharedStyle.css
+++ b/style/sharedStyle.css
@@ -2,9 +2,8 @@
 
 body, html {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  margin-top: 2vw;
-  margin-left: 8vw;
-  margin-right: 8vw;
+  margin: 0;
+  padding: 0;
 }
 
 /*----------------------------------FADEIN*/
@@ -21,7 +20,7 @@ section.visible {
 
 /*----------------------------------HEADER*/
 #header {
-  padding-bottom: 15vh;
+  padding-bottom: 20vh;
 }
 
 #home-div {
@@ -45,6 +44,58 @@ section.visible {
   color: black;
   display: inline;
   transition: all 0.5s ease;
+}
+
+/* Bob */
+@-webkit-keyframes hvr-bob {
+  0% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+  }
+  50% {
+    -webkit-transform: translateY(-14px);
+    transform: translateY(-14px);
+  }
+  100% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+  }
+}
+@keyframes hvr-bob {
+  0% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+  }
+  50% {
+    -webkit-transform: translateY(-14px);
+    transform: translateY(-14px);
+  }
+  100% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+  }
+}
+
+.hvr-bob {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 #darkmode:hover {
@@ -145,6 +196,13 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+/*-----------------------------BODY*/
+.content-margins {
+  padding-top: 5vw;
+  margin-left: 15vw;
+  margin-right: 15vw;
 }
 
 /*-----------------------------CONTACT*/
