--- a/style/workStyle.css
+++ b/style/workStyle.css
@@ -2,23 +2,8 @@ html, body {
   font-size: 1vw;
 }
 
-.no-bold {
-  font-weight: normal;
-}
-
-.line-height-160 {
-  line-height: 160%;
-}
-
-.big-title {
-  margin-left: 15%;
-  margin-top: 5vw;
-  font-size: 5vw;
-  font-weight: 600;
-}
-
 .work-title {
-  font-size: 2.5vw;
+  font-size: 3vw;
   font-weight: bold;
   margin-bottom: 5vw
 }
@@ -59,43 +44,23 @@ html, body {
 }
 
 /*---------------------------Container 3*/
-.impact-right-container {
-  display: grid;
-  grid-template-columns: 15% 50% 35%;
-  margin-bottom: 3vw;
-}
-
-.impact-right-container p {
-  margin: 0;
-  line-height: 210%;
-}
-
-.impact-right-container img {
-  width: 100%;
-  object-fit: contain;
-}
-
-.right-caption {
-  padding-left: 1vw;
-}
-
-.impact-left-container {
+.impact-container {
   display: grid;
   grid-template-columns: 15% 35% 50%;
   margin-bottom: 3vw;
 }
 
-.impact-left-container p {
+.impact-container p {
   margin: 0;
   line-height: 210%;
 }
 
-.impact-left-container img {
+.impact-container img {
   width: 100%;
   object-fit: contain;
 }
 
-.left-caption {
+.caption {
   padding-right: 1vw;
 }
 
