--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -32,20 +32,26 @@
 
 /*-----------------------------INTRODUCTION BODY*/
 #description {
-  font-size: 45px;
+  font-size: 3.5vw;
+  margin:0;
   float: right;
   font-weight: 600;
 }
-
 #description:hover {
-  transform: translateY(-10px);
-  transition: all 0.3s ease;
+  cursor: default;
+}
+
+#description-2 {
+  font-size: 1.5vw;
+  float: right;
+}
+#description-2:hover {
   cursor: default;
 }
 
 #home-location {
   position: absolute;
-  bottom: 5vh;
+  bottom: 0;
   right: 15vw;
   font-size: 14px;
 }
@@ -95,8 +101,9 @@
 }
 
 .not-ready {
-  opacity: 0.7;
-  filter: brightness(30%);
+  -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(50%);
+  opacity: 0.5;
 }
 
 #title {
