--- a/style/aboutStyle.css
+++ b/style/aboutStyle.css
@@ -6,6 +6,8 @@
 }
 
 .aboutArea {
+  display: grid;
+  grid-template-columns: 40% 20% 40%;
   margin-bottom: 10vw;
 }
 
@@ -20,6 +22,14 @@
   color: #D4D4D4;
 }
 
-.aboutWidth {
-  width: 35vw;
+.movie > .movie-space p {
+  font-size: 1vw !important;
+}
+
+.movie-space {
+  padding-top: 1.5vh;
+}
+
+.movie-wiki {
+  color: rgb(150,150,150);
 }
