--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -1,10 +1,34 @@
+.parallax {
+  perspective: 1px;
+  height: 95vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective-origin-x: 100%;
+}
+.parallax-layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform-origin-x: 100%;
+}
+.parallax-base {
+  transform: translateZ(0);
+}
+.parallax-back {
+  transform: translateZ(-1px) scale(2);
+}
+
 #light-bg {
   background-image:url("../assets/light-bg.jpg");
+  background-attachment: fixed;
   background-size: cover;
   height: 95vh;
   -webkit-filter: grayscale(30%); /* Safari 6.0 - 9.0 */
   filter: grayscale(30%);
   transition: all 0.5s ease;
+  z-index: 0;
 }
 
 /*----------------------------------HEADER*/
@@ -67,10 +91,16 @@
 }
 
 /*-----------------------------WORK*/
+.fixed-txt {
+  position: fixed;
+  z-index: 1;
+}
+
 .content {
   margin-top: 10vw;
   margin-left: 15vw;
   margin-right: 15vw;
+  z-index: 1;
 }
 
 .grid-container {
